Updating the mobile version

--- a/catalog.html
+++ b/catalog.html
@@ -14,8 +14,7 @@
 <body>
     <div class="top top_catalog center">
         <header class="header">
-            <a href="index.html" class="header__logo"><img src="images/logo.svg" alt="Логотип"
-                    class="header__img"></a>
+            <a href="index.html" class="header__logo"><img src="images/logo.svg" alt="Логотип" class="header__img"></a>
             <input placeholder="Поиск" type="text" class="header__input">
             <nav class="header__menu">
                 <a class="header__menu-link" href="catalog.html">Каталог</a>
@@ -243,7 +242,9 @@
                             </fieldset>
                         </div>
                     </div>
-                    <button type="submit" class=" buttons filtering__button">Применить</button>
+                    <div class="filtering__button">
+                        <button type="submit" class="buttons ">Применить</button>
+                    </div>
                 </form>
                 <select class="filter filter_small">
                     <option value="По популярности">По популярности</option>
